<resources>
    <string name="app_name">My Notes</string>
    <string name="background_image">background image</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">log in</string>
</resources>